--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ a{
 }
 
 body{
+    margin: 0;
 color: #151618;
 font-size: 20px;
 line-height: 1.5;
@@ -63,5 +64,37 @@ ul{
 
 .user__actions__item-search{
     margin-left: 80px;
+}
+
+.top{
+    background-image: url(../images/Group\ 91.jpg);
+    background-repeat: no-repeat;
+    background-position: bottom center;
+    background-size: cover;
+}
+
+.top__inner{
+    min-height: 500px;
+    color: #fff;
+    font-family: "Cormorant", serif;
+    font-weight: 400;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+}
+
+.top__title{
+font-size: 60px;
+margin-bottom: 20px;
+max-width: 790px;
+line-height: 1;
+font-weight: 400;
+}
+
+.top__text{
+    font-size: 24px;
+    margin-bottom: 48px;
+    max-width: 560px;
+    line-height: normal;
 }
 
