--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,13 @@ line-height: 1.5;
 font-weight: 300px;
 /* font-family: "Cormorant", serif; */
 font-family: "Open Sans", sans-serif;
+position: relative;
+}
+
+button{
+    padding: 0;
+    border: none;
+    background-color: transparent
 }
 
 ul{
@@ -46,6 +53,39 @@ ul{
     margin-bottom: 35px;
 }
 
+.menu__btn{
+    display: none;
+    width: 40px;
+    height: 20px;
+    flex-direction: column;
+    justify-content: space-between;
+    z-index: 2;
+    position: relative;
+}
+.menu--close{
+ display: none;
+ position: absolute;
+ left: 0;
+ right: 0;
+ top: 0;
+ bottom: 0;
+ background-color: rgba(0, 0, 0, .5);
+ z-index: 1;
+ transition: background-color .3s ease;
+}
+.menu--close.menu--open{
+    display: block;
+}
+.mobile__nav,
+.menu__close{
+    display: none;
+}
+.menu__btn span{
+    background-color: #000;
+    height: 2px;
+    width: 100%;
+}
+
 .menu__list{
     display: flex;
     align-items: center;
@@ -53,6 +93,8 @@ ul{
     font-weight: 400;
     font-size: 18px;
     margin-left: 85px;
+    position: relative;
+    z-index: 3;
 }
 
 
@@ -69,7 +111,7 @@ ul{
 .top{
     background-image: url(../images/Group\ 91.jpg);
     background-repeat: no-repeat;
-    background-position: bottom center;
+    background-position: bottom left;
     background-size: cover;
 }
 
@@ -98,3 +140,186 @@ font-weight: 400;
     line-height: normal;
 }
 
+.blockquote{
+    text-align: center;
+    font-family: "Cormorant", serif;
+    font-style: italic;
+    font-size: 40px;
+    max-width: 704px;
+    margin: 150px auto;
+    line-height: normal;
+}
+
+
+
+
+@media(max-width:1000px){
+    .user__actions__item-search{
+        margin-left: 30px;
+    }
+    .menu{
+        margin-right: auto;
+    }
+    .menu__list{
+        margin-left: 60px;
+    }
+    .logo{
+        margin-bottom: 0;
+    }
+    .header__inner{
+        min-height:auto;
+    }
+    .blockquote{
+        margin-top: 120px;
+        margin-bottom: 135px;
+    }
+}
+@media(max-width:868px){
+  .menu__list{
+    transform: translateY(-100%);
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    width: 480px;
+    margin: 0 auto;
+    background-color: white;
+    display: block;
+    text-align: center;
+    padding-top: 60px;
+    padding-left: 0;
+    transition: transform .8s ease;
+  }
+  .menu__list.menu__list--open{
+    transform: translateY(0%);
+  }
+.menu__close-btn{
+    position: absolute;
+    top: 20px;
+    right: 20px;
+}
+.mobile__nav,
+.menu__close{
+    display: block;
+}
+  .menu__item{
+    margin-bottom: 30px;
+    font-size: 24px;
+    font-weight: 400;
+    font-family: "Cormorant", serif;
+  }
+  
+  .mobile__menu{
+    padding-top: 60px;
+    margin: 60px 30px;
+    border-top: 2px solid #F7F2EA;
+  }
+  .mobile__menu__item{
+    margin-bottom: 35px;
+  }
+
+   .mobile-actions{
+    background-color: #F7F2EA;
+    height: 60px;
+    padding: 0 80px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0;
+   }
+   
+
+  .mobile__menu {
+    padding-left: 0;
+  }
+  .menu__btn{
+    display: flex;
+  }
+  .menu{
+    order: -1;
+    margin-right: 0;
+  }
+  .logo{
+    margin-left: auto;
+    margin-right: 180px;
+  }
+}
+
+@media(max-width:768px){
+ .header__inner{
+    padding-left: 64px;
+    padding-right: 64px;
+ }
+ .logo{
+    margin-left: auto;
+    margin-right: 110px;
+  }
+  .blockquote{
+    max-width: 640px;
+  }
+}
+
+@media(max-width:680px){
+ .container{
+    padding-left: 10px;
+    padding-right: 10px;
+ }
+ .header__inner{
+    padding-left: 0;
+    padding-right: 0;
+ }
+ .top__title{
+    font-size: 40px;
+    line-height: normal;
+ }
+ .blockquote{
+    max-width: 376px;
+    font-size: 16px;
+    margin-top: 60px;
+    margin-bottom: 60px;
+  }
+}
+
+
+@media(max-width:480px){
+.logo{
+    margin-right: 40px;
+}
+.logo img{
+    width: 39px;
+}
+.menu__list{
+    width: 360px;
+}
+}
+@media(max-width:360px){
+  .logo{
+    margin-right: 10px;
+  }
+  .user__actions__item-search{
+    margin-left: 0px;
+  }
+  .header__inner{
+    padding: 10px 0;
+  }
+  .top__title{
+    font-size: 24px;
+    margin-bottom: 10px;
+  }
+  .top__text{
+    font-size: 13px;
+    margin-bottom: 30px;
+  }
+  .top__inner{
+    min-height: 367px;
+  }
+  .blockquote{
+    max-width: 340px;
+    
+    margin-top: 70px;
+    margin-bottom: 80px;
+  }
+  .menu__list{
+    width: 260px;
+}
+}
