--- a/css/style.css
+++ b/css/style.css
@@ -303,7 +303,7 @@ border: none;
 border-bottom: 1px solid #B8B58B;
 background-color: transparent;
 padding: 3px 15px;
-width: 440px;
+width: 410px;
 margin-right: 25px;
 font-style: normal;
 font-weight: 300;
@@ -320,16 +320,49 @@ color: #B8B58B;
 padding-top: 10px;
 }
 .mailing-list__btn{
-padding:12px 41px ;
+padding:12px 31px ;
 background-color: #fff;
 border: 1px solid #151618;
 font-size: 20px;
+font-weight: 300;
+cursor: pointer;
 }
 
+.checkbox__text{
+    font-size: 13px;
+    padding-left: 20px;
+}
 
+.mailing-list__label{
+margin-top: 16px;
+}
 
+.checkbox{
+position: absolute;
+width: 1px;
+height: 1px;
+clip: rect(0,0,0,0);
+overflow: hidden;
+padding-left: 20px;
+}
+.checkbox-style{
+position: absolute;
+width: 10px;
+height: 10px;
+border: 1px solid #151618;
 
+margin-top: 5px;
+}
 
+.checkbox:checked + .checkbox-style::before{
+    position: absolute;
+    content: '';
+    width: 6px;
+    height: 6px;
+    background-color: #151618;
+    top: 1px;
+    left: 1px;
+}
 
 
 
